--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Defender</title>
   </head>
-
+<h1>A - Red laser (medium) || S - Green Laser (weak) || D - Purple Laser (strong)</h1>
   <body onload="main()">
 
     <script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
