started working on changing laser colors on keypress

--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,10 @@
     <br>
     Use your lasers to blast them.
     <br>
+    Spheres will gain speed as they are destroyed, but so will you.
+    <br>
+    <br>
+    <br>
     Arrow keys to move.
     <br>
     For Lasers use :
