--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>Defender</title>
+    <link href="styles.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="styles.css" rel="stylesheet">
   </head>
   <style>
     body {}
