--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
       A - Red laser (medium) <br> S - Green Laser (weak) <br> D - Purple Laser (strong)
 
     </p>
-    <input id="StartButton" type="button" value="Start Game" onclick="init();" style="height:50px; width:150px; background-color: #66FF66;"  />
+    <input id="StartButton" type="button" value="Start Game" onclick="init();" style="height:50px; width:150px; background-color: black;"/>
     <script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
   </body>
   <div id="meter" style ="display: none">Power </div>
